# Prusa-Firmware-Buddy-6.3.4

./: CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md
include/leds/: side_strip_control.hpp
include/marlin/: Configuration_COREONE.h  Configuration_COREONE_adv.h
lib/: AddMarlin.cmake
lib/Prusa-Error-Codes/: .gitrepo
lib/WUI/: espif.cpp
src/: CMakeLists.txt
src/buddy/: littlefs_internal.cpp  main.cpp  mmu_port.cpp
src/common/: CMakeLists.txt  appmain.cpp  filament.cpp  filament_sensors_handler.cpp  fsm_states.cpp  marlin_server.cpp  marlin_server.hpp  marlin_vars.hpp  probe_analysis.cpp  probe_analysis.hpp  str_utils.cpp  str_utils.hpp
src/connect/: planner.cpp
src/gui/: CMakeLists.txt  MItem_enclosure.cpp  MItem_hardware.cpp  MItem_hardware.hpp  MItem_menus.cpp  MItem_menus.hpp  MItem_tools.cpp  MItem_tools.hpp  fonts.cpp  guimain.cpp  screen_home.cpp  screen_menu_enclosure.hpp  screen_menu_hardware.hpp  screen_menu_user_interface.hpp  screen_network_setup.cpp  screen_phase_stepping_calibration.cpp  screen_printing.cpp  screen_printing.hpp
src/gui/screen/: CMakeLists.txt  screen_preheat.cpp  screen_preheat.hpp
src/gui/screen/filament/: screen_filament_detail.hpp
src/guiapi/src/: gui.cpp  (+1 more)
src/hw/: lis2dh12_poller.hpp
src/lang/: string_view_utf8.hpp  translation_provider_FILE.cpp
src/leds/: side_strip_control.cpp
src/marlin_stubs/: CMakeLists.txt  M1977.cpp  gcode.cpp
src/state/: printer_state.cpp
src/version/: version.cpp
tests/unit/: CMakeLists.txt
utils/holly/: build-pr.jenkins
utils/presets/: presets.json
(+71 files in other folders)
